2011-10-08  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* lisp/eshell/eshell.el (eshell-command): Avoid using hooks.

2011-10-07  Chong Yidong  <cyd@stupidchicken.com>

	* bindings.el ([M-left],[M-right]): Bind to left-word and
	right-word respectively.

2011-10-07  Glenn Morris  <rgm@gnu.org>

	* cus-start.el (debug-on-quit): Fix custom type.

2011-10-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* subr.el (define-key-after): Clarify that the function is not
	useful for non-menu keymaps.

	* progmodes/gdb-mi.el (gdb): Fix typo in doc string.

2011-10-06  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* eshell/eshell.el (eshell-command): Enable `eshell-mode' only
	in current minibuffer (Fix bug with recursive minibuffers).

2011-10-06  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/gdb-mi.el (gdb): Doc fix.

2011-10-05  Martin Rudalics  <rudalics@gmx.at>

	* window.el (frame-auto-hide-function): New option replacing
	frame-auto-delete.  Suggested by Stefan Monnier.
	(window--delete): Call frame-auto-hide-function instead of
	investigating frame-auto-delete.
	(window-point-1, set-window-point-1): New functions.
	(window-in-direction, record-window-buffer, window-state-get-1)
	(display-buffer-record-window): Use window-point-1 instead of
	window-point.
	(set-window-buffer-start-and-point): Use set-window-point-1.

2011-10-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/edebug.el: Heed checkdoc recommendations.

2011-10-05  Glenn Morris  <rgm@gnu.org>

	* progmodes/perl-mode.el (perl-electric-terminator): Doc fix.
	(perl-calculate-indent): Suppress scan errors.  (Bug#2205)

2011-10-05  Leo Liu  <sdl.web@gmail.com>

	* subr.el (read-char-choice): Fix argument to buffer-live-p which
	works with buffer object.

2011-10-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mpc.el (mpc-tool-bar-map): Add labels.

2011-10-04  Glenn Morris  <rgm@gnu.org>

	* calendar/holidays.el (calendar-check-holidays): Doc fix.
