@@ -1,3 +1,8 @@
+2011-10-08  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (window--delete): Delete dedicated frame
+	unconditionally when argument KILL is non-nil.  (Bug#9699)
+
 2011-10-08  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
 
 	* lisp/eshell/eshell.el (eshell-command): Avoid using hooks.
